manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "srahul3githubaks-261c"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "srahul3githubaks-261c"
  template:
    metadata:
      labels:
        app: "srahul3githubaks-261c"
    spec:
      containers:
        - name: "srahul3githubaks-261c"
          image: "srahul3.azurecr.io/srahul3githubaks"
          ports:
            - containerPort: 8080
