manifests/nodeport.yml

apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
spec:
  type: NodePort 
  ports:
  - port: 9999
    targetPort: 8080
    protocol: TCP
    name: http  
  selector:
    app: backend-go-voting
