manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "voting-be-svc"
    annotations:    
        service.beta.kubernetes.io/azure-load-balancer-internal: "true"
    labels:
        app: "voting-be-svc"
spec:
    type: LoadBalancer
    externalTrafficPolicy: Local
    ports:
    - port: 8888
      targetPort: 8080
      protocol: TCP
      name: http
    selector:
        app: "backend-go-voting"
