manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    service.beta.kubernetes.io/azure-load-balancer-internal: "svc"
spec:
  rules:
  - http:
      paths:      
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: voting-be-svc
            port:
              number: 8888
      - path: /*
        pathType: Prefix
        backend:
          service:
            name: voting-be-svc
            port:
              number: 8888
      - path: /
        pathType: Prefix
        backend:
          service:
            name: voting-be-svc
            port:
              number: 8888
